--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,12 @@
 </head>
 
 <body class="bg-neutral w-[85%] mx-auto">
+    <nav class="flex gap-3 mt-2">
+        <a href="/today" class="underline text-white/80 hover:text-white" data-link="today">Today</a>
+        <span class="text-white/40">/</span>
+        <a href="/tomorrow" class="underline text-white/80 hover:text-white" data-link="tomorrow">Tomorrow</a>
+    </nav>
+
     <header class="flex justify-between">
         <div class="flex flex-col items-center">
             <h1 class="text-9xl text-nowrap font-main text-main underline py-4 text-shadow-lg text-shadow-black/20">
