--- a/public/tomorrow.html
+++ b/public/tomorrow.html
@@ -290,15 +290,15 @@
 
                             <ul class="mt-4 rounded-lg bg-white" data-checklist-list></ul>
                         </div>
-                         <div class="bg-white mt-24 p-8 outline-4 outline-accents rounded-lg relative" data-bullets
+                        <div class="bg-white mt-24 p-8 outline-4 outline-accents rounded-lg relative" data-checklist
                             data-key="food">
                             <img src="images/food.png" alt="Food Image"
                                 class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
 
                             <div class="mt-8">
-                                <form class="flex justify-between" data-bullets-form>
+                                <form class="flex justify-between" data-checklist-form>
                                     <div class="flex flex-col">
-                                        <input type="text" data-bullets-input class="text-accents leading-loose font-bold tracking-wide text-xl font-sec
+                                        <input type="text" data-checklist-input class="text-accents leading-loose font-bold tracking-wide text-xl font-sec
                                         focus:outline-none caret-accents" autocomplete="off" />
                                         <hr class="-mt-3 border-b-3 border-main rounded-lg" />
                                     </div>
@@ -309,7 +309,7 @@
                                 </form>
                             </div>
 
-                            <ul class="mt-4 rounded-lg bg-white" data-bullets-list></ul>
+                            <ul class="mt-4 rounded-lg bg-white" data-checklist-list></ul>
 
                         </div>
                     </div>
