favicon + fixed notes and food

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Borel&family=Pacifico&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d879469828.js" crossorigin="anonymous"></script>
     <title id="page-title"></title>
+    <link rel="icon" type="image/x-icon" href="images/fav.ico" />
 </head>
 
 <body data-day-offset="0" class="bg-neutral w-[85%] mx-auto">
@@ -26,7 +27,7 @@
                 Good morning!
             </h1>
             <h2 class="text-2xl font-sec font-bold text-white text-right mr-8 py-3">
-                Today is <span id="today"></span>
+                Planning for <span id="today"></span>
             </h2>
         </div>
         <img src="images/garland.png" alt="Morning Image" class="h-64 w-[50%] object-fill pt-10" />
