--- a/public/tomorrow.html
+++ b/public/tomorrow.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./output.css" rel="stylesheet" />
-     <style>
+    <style>
         /* Hide the native calendar icon; we’ll show the FA icon instead */
         [data-countdown].is-form input[type="datetime-local"]::-webkit-calendar-picker-indicator {
             opacity: 0;
@@ -17,29 +17,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Borel&family=Pacifico&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d879469828.js" crossorigin="anonymous"></script>
     <title id="page-title"></title>
+    <link rel="icon" type="image/x-icon" href="images/fav.ico" />
 </head>
 
 <body data-day-offset="1" class="bg-neutral w-[85%] mx-auto">
-   
+
     <header class="flex justify-between">
         <div class="flex flex-col items-center">
-            <h1 id="greeting" class="text-9xl text-nowrap font-main text-main underline py-4 text-shadow-lg text-shadow-black/20">
+            <h1 id="greeting"
+                class="text-9xl text-nowrap font-main text-main underline py-4 text-shadow-lg text-shadow-black/20">
                 Good morning!
             </h1>
             <h2 class="text-2xl font-sec font-bold text-white text-right mr-8 py-3">
-                Tomorrow is <span id="today"></span>
+                Planning for <span id="today"></span>
             </h2>
         </div>
         <img src="images/garland.png" alt="Morning Image" class="h-64 w-[50%] object-fill pt-10" />
     </header>
-   <section class="flex gap-8 items-start">
+    <section class="flex gap-8 items-start">
         <!-- Countdown card -->
         <div class="bg-main p-8 rounded-lg relative">
             <div data-countdown>
                 <!-- view mode -->
                 <div data-countdown-view class="hidden">
                     <div class="flex items-start justify-between gap-3">
-                        <h3 data-countdown-title class="text-3xl font-main leading-loose text-white mb-2 pr-6 truncate"></h3>
+                        <h3 data-countdown-title class="text-3xl font-main leading-loose text-white mb-2 pr-6 truncate">
+                        </h3>
 
                         <!-- reset lives in the header, top-right (no absolute) -->
                         <button type="button" data-countdown-reset class="p-2 shrink-0">
@@ -290,27 +293,27 @@
 
                             <ul class="mt-4 rounded-lg bg-white" data-checklist-list></ul>
                         </div>
-                        <div class="bg-white mt-24 p-8 outline-4 outline-accents rounded-lg relative" data-checklist
+                        <div class="bg-white mt-24 p-8 outline-4 outline-accents rounded-lg relative" data-bullets
                             data-key="food">
                             <img src="images/food.png" alt="Food Image"
                                 class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
 
                             <div class="mt-8">
-                                <form class="flex justify-between" data-checklist-form>
+                                <form class="flex justify-between" data-bullets-form>
                                     <div class="flex flex-col">
-                                        <input type="text" data-checklist-input class="text-accents leading-loose font-bold tracking-wide text-xl font-sec
-                                        focus:outline-none caret-accents" autocomplete="off" />
+                                        <input type="text" data-bullets-input class="text-accents leading-loose font-bold tracking-wide text-xl font-sec
+                      focus:outline-none caret-accents" autocomplete="off" />
                                         <hr class="-mt-3 border-b-3 border-main rounded-lg" />
                                     </div>
                                     <button type="submit" class="shadow-2xl rounded-lg bg-main px-4 py-2 font-medium text-white
-                                   hover:bg-neutral transition-colors duration-300">
+                     hover:bg-neutral transition-colors duration-300">
                                         Add
                                     </button>
                                 </form>
                             </div>
 
-                            <ul class="mt-4 rounded-lg bg-white" data-checklist-list></ul>
-
+                            <!-- list-disc gives bullets; marker:text-main colors the bullets -->
+                            <ul class="mt-4 rounded-lg bg-white list-disc marker:text-main pl-6" data-bullets-list></ul>
                         </div>
                     </div>
                     <div class="w-[50%]">
