Revert "restore function, auto backup at eod"
This reverts commit 884d5dd2ec1df10a7b1fe5ae7b41dee041ee4fd1.

--- a/public/index.html
+++ b/public/index.html
@@ -95,14 +95,10 @@
                 class="self-start text-center w-64 rounded-lg hover:bg-white px-4 pt-4 pb-2 hover:text-neutral font-sec bg-main text-white transition-colors">
                 End day!
             </button>
-            <div class="ml-2 flex gap-4">
+            <div class="ml-2">
                 <button id="download-today">
                     <i class="fa-solid fa-file-arrow-down" style="color:white;"></i>
                     <span class="sr-only">Download today</span>
-                </button>
-                <button id="restore">
-                    <i class="fa-solid fa-file-arrow-up" style="color:white;"></i>
-                    <span class="sr-only">Restore</span>
                 </button>
             </div>
         </div>
