fixed dl button

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
                     <span id="smokescount">0</span> <span id="smokescount-plus">+</span>
                 </div>
 
-                <button id="download-today" class="inline-flex items-center justify-center">
+                <button id="download-today" type="button" class="inline-flex items-center justify-center">
                     <i class="fa-solid fa-file-arrow-down" style="color:white;"></i>
                     <span class="sr-only">Download today</span>
                 </button>
