--- a/public/index.html
+++ b/public/index.html
@@ -263,7 +263,11 @@
                             data-key="work">
                             <img src="images/work.png" alt="Work Image"
                                 class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
-
+                            <button
+                                class="absolute top-3 right-8 mt-3 text-neutral font-sec underline underline-offset-2 decoration-accents hover:cursor-pointer"
+                                data-clear-checked type="button" aria-label="Clear checked (Work)">
+                                Clear checked
+                            </button>
                             <div class="mt-8">
                                 <form class="flex justify-between" data-checklist-form>
                                     <div class="flex flex-col">
@@ -284,7 +288,11 @@
                             data-key="home">
                             <img src="images/house.png" alt="House Image"
                                 class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
-
+                            <button
+                                class="absolute top-3 right-8 mt-3 text-neutral font-sec underline underline-offset-2 decoration-accents hover:cursor-pointer"
+                                data-clear-checked type="button" aria-label="Clear checked (House)">
+                                Clear checked
+                            </button>
                             <div class="mt-8">
                                 <form class="flex justify-between" data-checklist-form>
                                     <div class="flex flex-col">
@@ -351,7 +359,11 @@
                             data-key="shopping">
                             <img src="images/cart.png" alt="Food Image"
                                 class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
-
+                            <button
+                                class="absolute top-3 right-8 mt-3 text-neutral font-sec underline underline-offset-2 decoration-accents hover:cursor-pointer"
+                                data-clear-checked type="button" aria-label="Clear checked (Shopping)">
+                                Clear checked
+                            </button>
                             <div class="mt-8">
                                 <form class="flex justify-between" data-checklist-form>
                                     <div class="flex flex-col">
