--- a/public/tomorrow.html
+++ b/public/tomorrow.html
@@ -120,12 +120,17 @@
                            hover:bg-neutral transition-colors duration-300">
                             Add
                         </button>
+                        <button type="button" class="my-auto flex gap-1">
+                            <i class="fa-solid fa-folder-open" style="color: #1C2317;">
+                            </i>
+                            <i class="fa-solid fa-caret-down" style="color: #1C2317;"></i>
+                        </button>
                     </form>
                 </div>
 
                 <ul class="mt-4 rounded-lg bg-white" data-checklist-list></ul>
 
-                <!-- Optional static item -->
+                <hr class="mt-4 border-1 w-[75%] mx-auto border-b border-main/40 rounded-full" />
                 <div class="mt-4" data-smoke>
                     <label class="flex items-center gap-3 cursor-pointer select-none">
                         <input type="checkbox" class="sr-only" />
@@ -142,6 +147,11 @@
                             Smoke break?
                         </span>
                     </label>
+                </div>
+                <div class="mt-3 hover:cursor-pointer text-right">
+                    <button type="button" data-template-save
+                        class="text-neutral font-sec underline underline-offset-2 decoration-accents ">Save
+                        template</button>
                 </div>
             </div>
 
@@ -166,11 +176,16 @@
                            hover:bg-neutral transition-colors duration-300">
                             Add
                         </button>
+                        <button type="button" class="my-auto flex gap-1">
+                            <i class="fa-solid fa-folder-open" style="color: #1C2317;">
+                            </i>
+                            <i class="fa-solid fa-caret-down" style="color: #1C2317;"></i>
+                        </button>
                     </form>
                 </div>
 
                 <ul class="mt-4 rounded-lg bg-white" data-checklist-list></ul>
-
+                <hr class="mt-4 border-1 w-[75%] mx-auto border-b border-main/40 rounded-full" />
                 <div class="mt-4" data-smoke>
                     <!-- same smoke block as above -->
                     <label class="flex items-center gap-3 cursor-pointer select-none">
@@ -188,6 +203,11 @@
                             Smoke break?
                         </span>
                     </label>
+                </div>
+                <div class="mt-3 hover:cursor-pointer text-right">
+                    <button type="button" data-template-save
+                        class="text-neutral font-sec underline underline-offset-2 decoration-accents ">Save
+                        template</button>
                 </div>
             </div>
 
@@ -212,11 +232,16 @@
                            hover:bg-neutral transition-colors duration-300">
                             Add
                         </button>
+                        <button type="button" class="my-auto flex gap-1">
+                            <i class="fa-solid fa-folder-open" style="color: #1C2317;">
+                            </i>
+                            <i class="fa-solid fa-caret-down" style="color: #1C2317;"></i>
+                        </button>
                     </form>
                 </div>
 
                 <ul class="mt-4 rounded-lg bg-white" data-checklist-list></ul>
-
+                <hr class="mt-4 border-1 w-[75%] mx-auto border-b border-main/40 rounded-full" />
                 <div class="mt-4" data-smoke>
                     <!-- same smoke block -->
                     <label class="flex items-center gap-3 cursor-pointer select-none">
@@ -234,6 +259,11 @@
                             Smoke break?
                         </span>
                     </label>
+                </div>
+                <div class="mt-3 hover:cursor-pointer text-right">
+                    <button type="button" data-template-save
+                        class="text-neutral font-sec underline underline-offset-2 decoration-accents ">Save
+                        template</button>
                 </div>
             </div>
         </section>
