--- a/public/tomorrow.html
+++ b/public/tomorrow.html
@@ -86,7 +86,7 @@
                 Back to current day
             </a>
             <div class="mt-6 ml-2">
-                <button id="download-today" type="button">
+                <button id="download-today" data-action="download" type="button">
                     <i class="fa-solid fa-file-arrow-down" style="color:white;"></i>
                     <span class="sr-only">Download today</span>
                 </button>
