--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
                 class="self-start text-center w-64 rounded-lg hover:bg-white px-4 pt-4 pb-2 hover:text-neutral font-sec bg-main text-white transition-colors">
                 Plan tomorrow...
             </a>
-            <button type="button" id="endday"
+            <button type="button" data-action="endday" id="endday"
                 class="self-start text-center w-64 rounded-lg hover:bg-white px-4 pt-4 pb-2 hover:text-neutral font-sec bg-main text-white transition-colors">
                 End day!
             </button>
@@ -94,12 +94,12 @@
                     <span id="smokescount">0</span> <span id="smokescount-plus">+</span>
                 </div>
 
-                <button id="download-today" type="button" class="inline-flex items-center justify-center">
+                <button id="download-today" data-action="download" type="button" class="inline-flex items-center justify-center">
                     <i class="fa-solid fa-file-arrow-down" style="color:white;"></i>
                     <span class="sr-only">Download today</span>
                 </button>
 
-                <button id="restore" class="inline-flex items-center justify-center">
+                <button id="restore" data-action="restore" class="inline-flex items-center justify-center">
                     <i class="fa-solid fa-file-arrow-up" style="color:white;"></i>
                     <span class="sr-only">Restore</span>
                 </button>
