carets titles and refactorings

--- a/public/tomorrow.html
+++ b/public/tomorrow.html
@@ -104,8 +104,15 @@
                 data-checklist data-start="10" data-end="14" data-key="morning">
                 <img src="images/am.png" alt="Morning Image"
                     class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-20" />
+                <div class="text-right">
+                    <button type="button">
+                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                    </button>
+                </div>
                 <div class="flex justify-between">
-                    <h3 class="text-4xl font-main font-bold text-main mb-4 tracking-widest">Morning</h3>
+                    <h3
+                        class="text-4xl font-main font-bold text-main mb-4 tracking-widest underline underline-offset-4">
+                        Morning</h3>
                     <p class="text-3xl font-bold font-main self-center text-main">10:00 - 14:00</p>
                 </div>
 
@@ -160,8 +167,15 @@
                 data-checklist data-start="14" data-end="18" data-key="daytime">
                 <img src="images/mid.png" alt="Day Image"
                     class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
+                <div class="text-right">
+                    <button type="button">
+                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                    </button>
+                </div>
                 <div class="flex justify-between">
-                    <h3 class="text-4xl font-main font-bold text-main mb-4 tracking-widest">Daytime</h3>
+                    <h3
+                        class="text-4xl font-main font-bold text-main mb-4 tracking-widest underline underline-offset-4">
+                        Daytime</h3>
                     <p class="text-3xl font-bold font-main self-center text-main">14:00 - 18:00</p>
                 </div>
 
@@ -216,8 +230,15 @@
                 data-checklist data-start="18" data-end="22" data-key="evening">
                 <img src="images/pm.png" alt="Evening Image"
                     class="absolute top-0 left-5 -translate-x-1/2 -translate-y-1/2 h-20" />
+                <div class="text-right">
+                    <button type="button">
+                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                    </button>
+                </div>
                 <div class="flex justify-between">
-                    <h3 class="text-4xl font-main font-bold text-main mb-4 tracking-widest">Evening</h3>
+                    <h3
+                        class="text-4xl font-main font-bold text-main mb-4 tracking-widest underline underline-offset-4">
+                        Evening</h3>
                     <p class="text-3xl font-bold font-main self-center text-main">18:00 - 22:00</p>
                 </div>
 
@@ -278,7 +299,16 @@
                             data-key="work">
                             <img src="images/work.png" alt="Work Image"
                                 class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
-
+                            <div class="flex justify-between">
+                                <h3
+                                    class="text-4xl font-main font-bold text-main underline underline-offset-4 mb-4 mt-5 tracking-widest">
+                                    Work</h3>
+                                <div class="mb-12">
+                                    <button type="button">
+                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                    </button>
+                                </div>
+                            </div>
                             <div class="mt-8">
                                 <form class="flex justify-between" data-checklist-form>
                                     <div class="flex flex-col">
@@ -299,7 +329,16 @@
                             data-key="home">
                             <img src="images/house.png" alt="House Image"
                                 class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
-
+                            <div class="flex justify-between">
+                                <h3
+                                    class="text-4xl font-main font-bold text-main underline underline-offset-4 mb-4 mt-5 tracking-widest">
+                                    Home</h3>
+                                <div class="mb-12">
+                                    <button type="button">
+                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                    </button>
+                                </div>
+                            </div>
                             <div class="mt-8">
                                 <form class="flex justify-between" data-checklist-form>
                                     <div class="flex flex-col">
@@ -320,7 +359,16 @@
                             data-key="food">
                             <img src="images/food.png" alt="Food Image"
                                 class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
-
+                            <div class="flex justify-between">
+                                <h3
+                                    class="text-4xl font-main font-bold text-main underline underline-offset-4 mb-4 mt-5 tracking-widest">
+                                    Menu</h3>
+                                <div class="mb-12">
+                                    <button type="button">
+                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                    </button>
+                                </div>
+                            </div>
                             <div class="mt-8">
                                 <form class="flex justify-between" data-bullets-form>
                                     <div class="flex flex-col">
@@ -344,6 +392,16 @@
                             data-key="notes">
                             <img src="images/notes.png" alt="House Image"
                                 class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-16" />
+                            <div class="flex justify-between">
+                                <h3
+                                    class="text-4xl font-main font-bold text-main underline underline-offset-4 mb-4 mt-5 tracking-widest">
+                                    Notes</h3>
+                                <div class="mb-12">
+                                    <button type="button">
+                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                    </button>
+                                </div>
+                            </div>
                             <div class="mt-8">
                                 <form class="flex gap-3 justify-between" data-bullets-form>
                                     <div class="flex flex-col">
@@ -365,7 +423,16 @@
                             data-key="shopping">
                             <img src="images/cart.png" alt="Food Image"
                                 class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
-
+                            <div class="flex justify-between">
+                                <h3
+                                    class="text-4xl font-main font-bold text-main underline underline-offset-4 mb-4 mt-5 tracking-widest">
+                                    Groceries</h3>
+                                <div class="mb-12">
+                                    <button type="button">
+                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                    </button>
+                                </div>
+                            </div>
                             <div class="mt-8">
                                 <form class="flex justify-between" data-checklist-form>
                                     <div class="flex flex-col">
