--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,8 @@
                     <span id="smokescount">0</span> <span id="smokescount-plus">+</span>
                 </div>
 
-                <button id="download-today" data-action="download" type="button" class="inline-flex items-center justify-center">
+                <button id="download-today" data-action="download" type="button"
+                    class="inline-flex items-center justify-center">
                     <i class="fa-solid fa-file-arrow-down" style="color:white;"></i>
                     <span class="sr-only">Download today</span>
                 </button>
@@ -119,8 +120,13 @@
                 data-checklist data-start="10" data-end="14" data-key="morning">
                 <img src="images/am.png" alt="Morning Image"
                     class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-20" />
+                <div class="text-right">
+                    <button type="button">
+                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                    </button>
+                </div>
                 <div class="flex justify-between">
-                    <h3 class="text-4xl font-main font-bold text-main mb-4 tracking-widest">Morning</h3>
+                    <h3 class="text-4xl font-main font-bold text-main mb-4 tracking-widest underline underline-offset-4">Morning</h3>
                     <p class="text-3xl font-bold font-main self-center text-main">10:00 - 14:00</p>
                 </div>
 
@@ -175,8 +181,13 @@
                 data-checklist data-start="14" data-end="18" data-key="daytime">
                 <img src="images/mid.png" alt="Day Image"
                     class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
+                <div class="text-right">
+                    <button type="button">
+                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                    </button>
+                </div>
                 <div class="flex justify-between">
-                    <h3 class="text-4xl font-main font-bold text-main mb-4 tracking-widest">Daytime</h3>
+                    <h3 class="text-4xl font-main font-bold text-main mb-4 tracking-widest underline underline-offset-4">Daytime</h3>
                     <p class="text-3xl font-bold font-main self-center text-main">14:00 - 18:00</p>
                 </div>
 
@@ -231,8 +242,13 @@
                 data-checklist data-start="18" data-end="22" data-key="evening">
                 <img src="images/pm.png" alt="Evening Image"
                     class="absolute top-0 left-5 -translate-x-1/2 -translate-y-1/2 h-20" />
+                <div class="text-right">
+                    <button type="button">
+                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                    </button>
+                </div>
                 <div class="flex justify-between">
-                    <h3 class="text-4xl font-main font-bold text-main mb-4 tracking-widest">Evening</h3>
+                    <h3 class="text-4xl font-main font-bold text-main mb-4 tracking-widest underline underline-offset-4">Evening</h3>
                     <p class="text-3xl font-bold font-main self-center text-main">18:00 - 22:00</p>
                 </div>
 
@@ -293,8 +309,19 @@
                             data-key="work">
                             <img src="images/work.png" alt="Work Image"
                                 class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
-                            <div class="mt-3 hover:cursor-pointer text-right">
-                                <button class="text-neutral font-sec underline underline-offset-2 decoration-accents"
+                            <div class="flex justify-between">
+                                <h3
+                                    class="text-4xl font-main font-bold text-main underline underline-offset-4 mb-4 mt-5 tracking-widest">
+                                    Work</h3>
+                                <div class="mb-12">
+                                    <button type="button">
+                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="mt-3">
+                                <button
+                                    class="text-white text-sm font-sec bg-maind rounded-full pt-3 px-4 shadow-2xl outline-gray-700/80 hover:cursor-pointer"
                                     data-clear-checked type="button" aria-label="Clear checked (Work)">
                                     Clear checked
                                 </button>
@@ -319,8 +346,19 @@
                             data-key="home">
                             <img src="images/house.png" alt="House Image"
                                 class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
-                            <div class="mt-3 hover:cursor-pointer text-right">
-                                <button class="text-neutral font-sec underline underline-offset-2 decoration-accents"
+                            <div class="flex justify-between">
+                                <h3
+                                    class="text-4xl font-main font-bold text-main underline underline-offset-4 mb-4 mt-5 tracking-widest">
+                                    Home</h3>
+                                <div class="mb-12">
+                                    <button type="button">
+                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="mt-3">
+                                <button
+                                    class="text-white text-sm font-sec bg-maind rounded-full pt-3 px-4 shadow-2xl outline-gray-700/80 hover:cursor-pointer"
                                     data-clear-checked type="button" aria-label="Clear checked (House)">
                                     Clear checked
                                 </button>
@@ -345,7 +383,16 @@
                             data-key="food">
                             <img src="images/food.png" alt="Food Image"
                                 class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
-
+                            <div class="flex justify-between">
+                                <h3
+                                    class="text-4xl font-main font-bold text-main underline underline-offset-4 mb-4 mt-5 tracking-widest">
+                                    Menu</h3>
+                                <div class="mb-12">
+                                    <button type="button">
+                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                    </button>
+                                </div>
+                            </div>
                             <div class="mt-8">
                                 <form class="flex justify-between" data-bullets-form>
                                     <div class="flex flex-col">
@@ -371,6 +418,16 @@
                             data-key="notes">
                             <img src="images/notes.png" alt="House Image"
                                 class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2" />
+                            <div class="flex justify-between">
+                                <h3
+                                    class="text-4xl font-main font-bold text-main underline underline-offset-4 mb-4 mt-5 tracking-widest">
+                                    Notes</h3>
+                                <div class="mb-12">
+                                    <button type="button">
+                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                    </button>
+                                </div>
+                            </div>
                             <div class="mt-8">
                                 <form class="flex gap-3 justify-between" data-bullets-form>
                                     <div class="flex flex-col">
@@ -393,8 +450,19 @@
                             data-key="shopping">
                             <img src="images/cart.png" alt="Food Image"
                                 class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
-                            <div class="mt-3 hover:cursor-pointer text-right">
-                                <button class="text-neutral font-sec underline underline-offset-2 decoration-accents"
+                            <div class="flex justify-between">
+                                <h3
+                                    class="text-4xl font-main font-bold text-main underline underline-offset-4 mb-4 mt-5 tracking-widest">
+                                    Groceries</h3>
+                                <div class="mb-12">
+                                    <button type="button">
+                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="mt-3">
+                                <button
+                                    class="text-white text-sm font-sec bg-maind rounded-full pt-3 px-4 shadow-2xl outline-gray-700/80 hover:cursor-pointer"
                                     data-clear-checked type="button" aria-label="Clear checked (Shopping)">
                                     Clear checked
                                 </button>
